src/components/all.sass
@import "~bulma/sass/utilities/initial-variables"
@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap')
@import url('https://fonts.googleapis.com/css?family=Assistant&display=swap')

// Config vars
// Kaldi logo brand color: #FD461E
$kaldi-red: #b03619
$kaldi-red-invert: #fff

$primary: $kaldi-red
$primary-invert: $kaldi-red-invert
$body-color: #333
$black: #2b2523

$navbar-background: #16356f

.navbar .navbar-menu
  box-shadow:none !important

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  justify-content: left
  align-items: center
  li
    padding: 0 2rem 1rem 0
    margin-bottom: 1.5rem
    margin-top: 0

// Helper Classes
.full-width-image-container
  width: 100vw
  height: 400px
  position: relative
  left: 50%
  right: 50%
  margin: 2em -50vw
  background-size: cover
  background-position: bottom
  display: flex
  justify-content: center
  align-items: center

.full-width-image
    width: 100vw
    height: 400px
    background-size: cover
    background-position: bottom
    display: flex
    justify-content: center
    align-items: center

.btn
    display: inline-block
    padding: 12px 16px 10px
    font-size: 18px
    font-size: 1rem
    line-height: 1.25
    background-color: #fff
    border-radius: .25rem
    text-decoration: none
    font-weight: 700
    color: #CC3700
    text-align: center
    -webkit-box-shadow: inset 0 0 0 2px #CC3700
    box-shadow: inset 0 0 0 2px #f40
    -webkit-transition: all .15s ease
    transition: all .15s ease

.margin-top-0
  margin-top: 0 !important

.navbar-item .icon
  color: $primary
// Override for use of svg's from https://simpleicons.org/
.icon svg
  width: 1.5rem
  height: 1.5rem
  fill: currentColor
.navbar-brand .navbar-item.logo
  padding: 0 1rem

.centered
  display: flex
  flex-direction: row
  justify-content: center
  flex-wrap: wrap

.big-button
  color: rgb(14, 61, 119)
  font-size: 2.5em
  font-family: 'Oswald', sans-serif
  font-weight: bold
  text-align: center
  padding: 4px
  margin: 0 0 1em
  min-width: 350px
  background-color: rgb(234, 204, 98)

.big-button a
  color: rgb(14, 61, 119)
  padding: 8px 32px
  margin: 0px 16px
  white-space: nowrap

.big-button a:hover
  color: $kaldi-red

footer.footer
  padding: 3rem 0rem 0rem
  background-color: transparent

//Menu overrides
$menu-item-color: $white-ter
$menu-item-hover-color: $black !important
$menu-item-hover-background-color: $black
$menu-item-active-color: $kaldi-red-invert
$menu-item-active-background-color:	$kaldi-red-invert
$menu-list-border-left: 1px solid $kaldi-red-invert
$menu-label-color: $white-ter


.menu-label
  font-size: 1em !important
  text-align: left
.menu-list
  list-style: none !important
  text-align: left
.social
  padding: 2em
.social a
    padding: .5em .5em .3em .5em
    border-radius: 1em
    background-color: $white-ter
    margin: .5em
    width: 1em
    height: 1em
    vertical-align: middle
    display: inline

// blog roll
.blog-list-item.is-featured
  background-color: #d6400033;
.blog-list-item header
  display: flex;
  margin-bottom: 1em;
.blog-list-item .featured-thumbnail
  flex-basis: 35%;
  margin: 0 1.5em 0 0;


@import "~bulma"

//hacking in some overrides below, requires improvement
body
  color: black
  background-color: #F5F5F5
  font-family: 'Assistant', sans-serif

a:hover
  color: #3273dc

.navbar, .navbar-menu
  font-weight: bold

.navbar a, .navbar-burger
  color: white

.content h1, .content h2, .content h3, .content h4, .content h5, .content h6, .title
  color: black

.navbar-item
  font-family: 'Oswald', sans-serif
  font-size: 1.5em

.navbar-start
  padding-left: 32px
  padding-top: 8px

.navbar-item img
  max-height: 200px

.header
  display: flex
  justify-content: center
  flex: 1
  height: 300px
  background-repeat: repeat-x
  background-size: contain

// Default to 0px, and it will be changed with +mobile.
.header-logo-banner
  display: none;

.header-logo
  height: 300px

.header-banner
  max-width: 650px

.header-top
  height: 74px
  z-index: 10  // nav bar menu needs to appear over banner.

.header-container 
  flex-direction: column
  display: flex
  position: relative
  right: 20px

.call-to-action
  display: flex
  justify-content: center
  flex-wrap: wrap
  background-color: rgb(13, 50, 95)

.call-to-action a
  font-size: 3em
  font-family: 'Oswald', sans-serif;
  font-weight: bold;
  text-align: center;
  color: rgb(13, 50, 95)
  margin: 16px
  padding: 4px
  min-width: 340px;
  background-color: rgb(234, 204, 98)

footer.footer
  color: white
  text-align: center
  background-color: rgb(14, 61, 119)

footer.footer a
  color: white

.social-media
  display: flex
  justify-content: center
  align-items: center

.social-media a.social-media-icon
  height: 50px
  width: 50px
  margin: 16px
  border-radius: 33%
  border: 3px $kaldi-red-invert solid
  display: flex
  justify-content: center
  align-items: center
  color: $kaldi-red-invert
  -webkit-transition: background-color 0.25s ease-out
  -moz-transition: background-color 0.25s ease-out
  -o-transition: background-color 0.25s ease-out
  transition: background-color 0.25s ease-out

.social-media a.social-media-icon:hover
  color: $navbar-background
  background-color: $kaldi-red-invert


.social-media a.social-media-icon:active
  -webkit-transition: background-color 0.25s ease-out
  -moz-transition: background-color 0.25s ease-out
  -o-transition: background-color 0.25s ease-out
  transition: background-color 0.25s ease-out
  background: rgba(255,0,0,0)
  color: $kaldi-red-invert

.external-links
  margin: 1em
  font-size: 0.85rem

// responsiveness
+tablet-only
  .blog-list-item .featured-thumbnail
    flex-basis: 50%;
  .header-mobile
    width: 0px;
  .navbar-menu
    background-color: #16356f

+mobile
  .blog-list-item header
    display: block
  .blog-list-item .featured-thumbnail
    text-align: center;
    max-width: 70%;
    margin: 0 0 1em;
  .header-logo-banner
    width: auto;
    display: block;
  .header-logo
    display: none !important
  .header-banner
    display: none !important
  .navbar-menu
    background-color: $navbar-background
  .main-page-columns
    display: flex
    flex-direction: column-reverse

.mobile-navbar
  position: fixed
  background-color: rgba(0,0,0,0)
  height: 100%
  width: 100%
  top: 0
  left: -100%
  z-index: 999
  transition: left .25s ease-in-out
  display: flex !important
  padding: 0

.mobile-navbar.is-active
  left: 0

.mobile-navbar .navbar-start
  flex: 1
  display: flex
  flex-direction: column
  padding: 0
  background-color: $navbar-background

.mobile-navbar .navbar-start a.navbar-item
  color: $kaldi-red-invert

.mobile-navbar .navbar-start a.navbar-item:hover
  color: $navbar-background

.mobile-navbar .navbar-start a.navbar-item:active
  color: $kaldi-red

.mobile-navbar.is-active .mobile-backdrop:hover
  cursor: pointer

.mobile-navbar .mobile-backdrop
  flex: 3
  background-color: rgba(0, 0, 0, 0.3)
  width: 100%
  height: 100%

